--- a/migration/src/main/resources/application.properties
+++ b/migration/src/main/resources/application.properties
@@ -5,8 +5,8 @@ quarkus.http.port=8086
 # configure your datasource
 quarkus.datasource.url=jdbc:postgresql://localhost:5432/central-db
 quarkus.datasource.driver=org.postgresql.Driver
-quarkus.datasource.username=rootuser
-quarkus.datasource.password=123
+quarkus.datasource.username=admin
+quarkus.datasource.password=admin
 quarkus.hibernate-orm.dialect=org.hibernate.dialect.PostgreSQLDialect
 quarkus.hibernate-orm.database.generation=none
 
