Fix data with go-food interaction with front

--- a/menu-service/src/main/resources/application.properties
+++ b/menu-service/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 #database configuration
-spring.datasource.url=jdbc:postgresql://central-db:5432/central-db
+spring.datasource.url=jdbc:postgresql://localhost:5432/central-db
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
