--- a/journal-service/src/main/resources/application.properties
+++ b/journal-service/src/main/resources/application.properties
@@ -2,8 +2,10 @@ server.port=8083
 server.servlet.context-path=/journal
 
 #database configuration
+
 spring.datasource.url=jdbc:postgresql://central-db:5432/central-db
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
